crates/rome_js_formatter/tests/specs/prettier/js/regex/v-flag.js.snap
---
source: crates/rome_js_formatter/tests/prettier_tests.rs
expression: v-flag.js
---
# Input
```js
/a/v;

```

# Output
```js
/a/v;

```

# Errors
```
error: invalid regex flag
  ┌─ v-flag.js:1:4
  │
1 │ /a/v;
  │    ^ this is not a valid regex flag


```


